poc/k8s/documentacao-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-poc-documentacao-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-poc-documentacao-api
  template:
    metadata:
      labels:
        app: k8s-poc-documentacao-api
    spec:
      containers:
        - name: poc-documentacao-api
          image: poc-documentacao-api:latest
          imagePullPolicy: Never
          ports:
           - containerPort: 8083
          readinessProbe:
            httpGet:
              port: 8083
              path: /documentacao-api/actuator/health/readiness
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8083
              path: /documentacao-api/actuator/health/liveness
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-poc-documentacao-api
spec:
  ports:
    - name: 80-8083
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app: k8s-poc-documentacao-api
  type: ClusterIP
